Change hostname and add non secure port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8761
-eureka.instance.hostname=localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.default-zone=https://${eureka.instance.hostname}:${server.port}/eureka/
+eureka.instance.hostname=guidance-discovery-service.herokuapp.com
+eureka.instance.non-secure-port=80
+eureka.client.service-url.default-zone=https://guidance-discovery-service.herokuapp.com/eureka/
