Remove register to eureka itself

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ eureka:
     hostname: guidance-discovery-service.herokuapp.com
     nonSecurePort: 80
   client:
+    fetch-registry: false
+    register-with-eureka: false
     serviceUrl:
       defaultZone: https://guidance-discovery-service.herokuapp.com/eureka/
 spring:
@@ -20,6 +22,8 @@ eureka:
     hostname: guidance-discovery-service2.herokuapp.com
     nonSecurePort: 80
   client:
+    fetch-registry: false
+    register-with-eureka: false
     serviceUrl:
       defaultZone: https://guidance-discovery-service1.herokuapp.com/eureka/
 spring:
